Fix Bug Admin form